--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest selenium beautifulsoup4 # Добавьте selenium здесь
+        python -m pip install flake8 pytest selenium beautifulsoup4 cryptography# Добавьте selenium здесь
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
